--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /DiscordBot.Bots/GlobalSuppressions.cs
 /appsettings.json
 /appsettings.Live.json
+/GGTwitchBot.Bot/appsettings.json
+/GGTwitchBot.Bot/appsettings.Production.json
