--- a/GGTwitchBot.Core/GGTwitchBot.Core.csproj
+++ b/GGTwitchBot.Core/GGTwitchBot.Core.csproj
@@ -3,7 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+    <Configurations>Debug;Release;Live_Build</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GGTwitchBot.DAL\GGTwitchBot.DAL.csproj" />
+  </ItemGroup>
 
 </Project>
