--- a/GGTwitchBot.DAL.Migrations/GGTwitchBot.DAL.Migrations.csproj
+++ b/GGTwitchBot.DAL.Migrations/GGTwitchBot.DAL.Migrations.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;Live_Build</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GGTwitchBot.DAL\GGTwitchBot.DAL.csproj" />
+  </ItemGroup>
 
 </Project>
