--- a/GGTwitchBot.DAL/GGTwitchBot.DAL.csproj
+++ b/GGTwitchBot.DAL/GGTwitchBot.DAL.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+    <Configurations>Debug;Release;Live_Build</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
 
 </Project>
