Added Automated Beta

--- a/GGTwitchBot.DAL.Migrations/GGTwitchBot.DAL.Migrations.csproj
+++ b/GGTwitchBot.DAL.Migrations/GGTwitchBot.DAL.Migrations.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\GGTwitchBot.DAL\GGTwitchBot.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
