--- a/GGTwitchBot.Bot/GGTwitchBot.Bot.csproj
+++ b/GGTwitchBot.Bot/GGTwitchBot.Bot.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="PokeApiNet" Version="3.0.10" />
+    <PackageReference Include="SimplifiedSearch" Version="1.2.0" />
     <PackageReference Include="TwitchLib" Version="3.5.3" />
   </ItemGroup>
 
